<resources>

    <string name="app_name">TestePoll</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_home_title">홈</string>
    <string name="category_title">카테고리</string>
    <string name="register">등록</string>
    <string name="login">로그인</string>
    <string name="service_center">서비스 센터</string>
    <string name="activity">활동</string>
    <string name="setting">설정</string>
    <string name="loign">로그인</string>
    <string name="email">이메일 </string>
    <string name="email_hint">yourmail@email.com</string>
    <string name="password">비밀 번호</string>
    <string name="lost_password">비밀번호가 기억나지 않으세요?</string>
    <string name="registeration">등록</string>
    <string name="facebook_reg">페이스북 정보를 이용하시려면</string>
    <string name="or">또는</string>
    <string name="aleady_account">이미 계정을 가지고 계신가요? </string>
    <string name="create_account">계정 생성</string>
    <string name="user_name">사용자명</string>
    <string name="user_name_hint">사용할 이름</string>
    <string name="gender">성별</string>
    <string name="agree_contract">테이스트 폴 이용 약관에 동의합니다.</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="middle">중성</string>
    <string name="check_email">이런, 이메일 주소를 잊으셨군요.!</string>
    <string name="check_pass">이런, 비밀번호를 잊으셨군요</string>
    <string name="check_name">당신의 이름을 알려주세요!</string>
    <string name="check_gender">당신의 성별은 무엇인가요?</string>
    <string name="birth_hint">1972-10-10</string>
    <string name="birth">생일</string>
    <string name="location">지역</string>
    <string name="city_hint">당신의 지역</string>
    <string name="contry_hint">당신의 나라</string>
    <string name="job">직업</string>
    <string name="job_hint">프로그래머</string>
    <string name="done">완료</string>
    <string name="reg_by_email">이메일로 가입하기</string>
    <string name="reg_by_face">페이스북 가입하기</string>
    <string name="profile">프로필</string>
    <string name="next">다음</string>
    <string name="join_member">지금 바로 가입하기</string>
    <string name="find">탐색</string>
    <string name="account">계정</string>
    <string name="be_my_friend">우리의 친구가 되어 주세요 </string>
    <string name="overview">당신이 궁금한 것에 대해 질문하고\n또 당신의 취향에 따라 투표할 수 있습니다.</string>
    <string name="reset_pass">비밀번호가 기억나지 않으세요?</string>
    <string name="reset_password">비밀번호 초기화</string>
    <string name="change_pass">비밀번호 변경</string>
    <string name="channel">채널</string>
    <string name="push_poll_end">폴 마감</string>
    <string name="push_comment">코멘트</string>
    <string name="push_reply">답글</string>
    <string name="push_vote_count">투표수</string>
    <string name="push_new_follower">새로운 팔로워</string>
    <string name="push_create_poll_by_friend">친구의 폴 생성</string>
    <string name="push_vote_count1">투표 수( 참여한 폴)</string>
    <string name="log_out">로그아웃</string>
    <string name="tastepoll">테이스트 폴</string>
    <string name="settings">설정</string>
    <string name="question_suffix">님이 질문했어요</string>
    <string name="tastenews">테이스트폴 뉴스</string>
    <string name="user_guide">이용 약관</string>
    <string name="user_private_info">개인정보 취급 방침</string>
    <string name="support">문의 / 지원</string>
    <string name="valuate">앱 스토어에서 평가하기</string>
    <string name="poll">폴</string>
    <string name="do_poll">투표하기</string>
    <string name="report">신고하기</string>
    <string name="mycurious">내가 궁금한 건</string>
    <string name="detail_explain">   질문에 대해 더 설명해 주세요 (선택 사항)</string>
    <string name="select_category">카테고리 선택</string>
    <string name="create_new_poll">새로운 폴 생성</string>
    <string name="poll_activate_period">폴 활성 기간</string>
    <string name="one_day">1 일</string>
    <string name="one_week">1 주일</string>
    <string name="one_month">1 개월</string>
    <string name="limitless">마감 없음</string>
    <string name="add_item">항목 추가하기</string>
    <string name="each_item">폴 답변 항목</string>
    <string name="overview_item">항목 설명하기</string>
    <string name="no_poll_yet">아무것도 보이지 않으세요?</string>
    <string name="app_guide">당신의 친구들의 질문이 이곳에 보여집니다.\n폴과 당신의 친구들을 찾아보세요.\n혹은\n추천되는 사람들을 팔로잉해보세요</string>
    <string name="push_setting">푸쉬 설정</string>
    <string name="welcome_message">Taset Poll 에 오신 것을 환영합니다</string>
 

</resources>