<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  
    android:orientation="vertical" 
    android:focusable="true"
    android:background="#ffffff" 
    android:focusableInTouchMode="true">

    <ViewFlipper
        android:id="@+id/reg_form_flipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <!-- 회원 가입 폼 1단계 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/reg_process_close_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pop_btn_close" />

                <TextView
                    style="@style/formTitle"
                     android:layout_marginLeft="5dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/registeration" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/facebook_reg"
                android:textColor="#000000" />

            <Button
                android:id="@+id/facebook_reg_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/cac_btn_fb"
                android:text="@string/reg_by_face"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/or"
                android:textColor="#000000" />

            <Button
                android:id="@+id/email_reg_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/cac_btn_email"
                android:text="@string/reg_by_email"
                android:textColor="#000000"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/aleady_account"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/login"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

        <!-- 회원 가입 폼 2단계 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                 android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/reg_pre_nav_btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pop_btn_back" />

                <TextView
                   	style="@style/formTitle"
                   	 android:layout_marginLeft="5dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/create_account"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                   style ="@style/formfield"
                    android:layout_marginRight="12dp"
                    android:text="@string/email"
                     />

                <EditText
                    android:id="@+id/email_edit"
                    style ="@style/forminputbox"
                    android:layout_width="match_parent"
                    android:background="@drawable/state_edit_selector"
                    android:hint="@string/email_hint"
              />
            </LinearLayout>

            <TextView
                android:id="@+id/email_error_holder"
                style="@style/errorholder"
                android:visibility="invisible"
                android:text="@string/check_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                 
                    android:layout_marginRight="12dp"
                    android:text="@string/password"
                    style="@style/formfield" />

                <EditText
                    android:id="@+id/password_edit"
      				style ="@style/forminputbox"
      				android:layout_width="match_parent"
                    android:background="@drawable/state_edit_selector"
                    android:hint="@string/email_hint"
                     />
            </LinearLayout>

            <TextView
                android:id="@+id/pass_error_holder"
                style="@style/errorholder"
                android:visibility="invisible"
                android:text="@string/check_pass" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                   style="@style/formfield"
                    android:layout_marginRight="12dp"
                    android:text="@string/user_name"
                    />

                <EditText
                    android:id="@+id/user_name_edit"
                    android:layout_width="match_parent"
          			style="@style/forminputbox"
                    android:background="@drawable/state_edit_selector"
                    android:hint="@string/user_name_hint"
                   />
            </LinearLayout>

            <TextView
                android:id="@+id/name_error_holder"
                style="@style/errorholder"
                android:visibility="invisible"
                android:text="@string/check_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/formfield"
                    android:layout_marginRight="12dp"
                    android:text="@string/gender"
                     />

                <RadioGroup
                    android:id="@+id/geneder_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name_hint"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/man_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/man" />

                    <RadioButton
                        android:id="@+id/woman_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/woman" />

                    <RadioButton
                        android:id="@+id/middle_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/middle" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/gender_error_holder"
                style="@style/errorholder"
                android:visibility="invisible"
                android:text="@string/check_gender" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/formfield"
                    android:layout_marginRight="12dp"
                    android:layout_width="wrap_content"
                    android:text="@string/agree_contract"
                    android:textColor="#ff0000"
                    android:layout_marginTop ="10dp"
                    android:layout_marginBottom ="10dp"
                    android:textStyle="normal"
                    android:textSize="12sp"
                     />

                <CheckBox
                    android:id="@+id/argree_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
         
                </LinearLayout>

            <Button
                android:id="@+id/next1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/cac_btn_grey"
                android:text="@string/next"
                android:textColor="#000000" />
        </LinearLayout>

        <!-- 회원 가입 폼 3단계 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                  >

                <ImageView
                    android:id="@+id/reg_pre_nav_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pop_btn_back" />

                <TextView
                    style="@style/formTitle"
                     android:layout_marginLeft="5dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/profile"
                     />
            </LinearLayout>

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/gen_prf_female_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/formfield"
                    android:layout_marginRight="12dp"
                    android:text="@string/birth"
                     />

                <EditText
                    android:id="@+id/birth_edit"
                    android:layout_width="match_parent"
                  	style="@style/forminputbox"
                    android:background="@drawable/state_edit_selector"
                    android:hint="@string/birth_hint"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/formfield"
                    android:layout_marginRight="12dp"
                    android:text="@string/location"
                    
                    />

                <EditText
                    android:id="@+id/city_edit"
                    style="@style/forminputbox"
                    android:layout_width="0dp"
   
                    android:layout_weight="1"
                    android:background="@drawable/state_edit_selector"
                    android:hint="@string/city_hint"
                    />

                <EditText
                    android:id="@+id/contiry_edit"
                     style="@style/forminputbox"
                    android:layout_width="0dp"
     
                    android:layout_weight="1"
                    android:background="@drawable/state_edit_selector"
                    android:hint="@string/contry_hint"
               />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                  	style="@style/formfield"
                    android:layout_marginRight="12dp"
                    android:text="@string/job"
                    />

                <EditText
                    android:id="@+id/job_edit"
                    style="@style/forminputbox"
                    android:layout_width="match_parent"
            
                    android:background="@drawable/state_edit_selector"
                    android:hint="@string/job_hint"
                     />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/cac_btn_blue"
                android:text="@string/done"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ViewFlipper>

</LinearLayout>