<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#444444" 
    android:padding="20dp">

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

  
        <LinearLayout
            android:id="@+id/login_not_status_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">

            <TextView
                android:id="@+id/reg_btn"
                style="@style/behindMenuItemLabel2"
                android:text="@string/register" />

            <TextView
                android:id="@+id/login_btn"
                style="@style/behindMenuItemLabel2"
                android:text="@string/login" />

            

          
        </LinearLayout>
		<LinearLayout style="@style/itemDelimination" />
		
        <TextView
            android:id="@+id/service_center_btn"
            style="@style/behindMenuItemLabel2"
            android:text="@string/service_center" />
    </LinearLayout>

</LinearLayout>