<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#444444" 
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/login_status_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/gen_prf_female_large" />

                <TextView
                    android:id="@+id/user_id"
                    style="@style/behindMenuItemLabel2"
                    android:textColor="#ffffff"
                    android:text="Ahn young chul" />
            </LinearLayout>

            <TextView
                android:id="@+id/act_btn"
                style="@style/behindMenuItemLabel2"
                android:text="@string/activity"
                 />

            <TextView
                android:id="@+id/setting_btn"
                style="@style/behindMenuItemLabel2"
                android:text="@string/setting" />
        </LinearLayout>

 
		<LinearLayout style="@style/itemDelimination" />
		
        <TextView
            android:id="@+id/service_center_btn"
            style="@style/behindMenuItemLabel2"
            android:text="@string/service_center" />
    </LinearLayout>

</LinearLayout>